--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "@team-innovage",
   "dependencies": {
+    "@types/react-html-parser": "^2.0.1",
     "gatsby": "^2.19.45",
     "gatsby-image": "^2.2.44",
     "gatsby-plugin-manifest": "^2.2.48",
@@ -26,6 +27,10 @@
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
+    "babel-eslint": "^8.2.6",
+    "eslint": "^6.8.0",
+    "eslint-loader": "^4.0.2",
+    "gatsby-plugin-eslint": "^2.0.8",
     "gatsby-plugin-root-import": "^2.0.5",
     "prettier": "^1.19.1"
   },
